--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Shivam Gusain",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   }
 }
